# invoice-ingestion

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  energy-invoice-extraction-international-addendum.md  pyproject.toml
.claude/: settings.local.json
docs/: energy-invoice-extraction-algorithm.md
frontend/: next.config.mjs  next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx
frontend/app/corrections/: page.tsx
frontend/app/invoices/: page.tsx
frontend/app/llm-calls/: page.tsx
frontend/app/queue/: page.tsx
frontend/app/upload/: page.tsx
frontend/components/: ChargeLineEditor.tsx  ConfidenceBadge.tsx  ExtractionPanel.tsx  FieldEditor.tsx  InvoiceViewer.tsx  MeterSection.tsx  QueueTable.tsx  TotalsSection.tsx
frontend/hooks/: useExtraction.ts  useReviewQueue.ts
frontend/lib/: api.ts  types.ts
function_app/: function_app.py
infra/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/environments/: dev.tfvars  prod.tfvars
infra/modules/azure_openai/: main.tf  outputs.tf  variables.tf
infra/modules/container_app/: main.tf  outputs.tf  variables.tf
infra/modules/database/: main.tf  outputs.tf  variables.tf
infra/modules/function/: main.tf  variables.tf
infra/modules/keyvault/: main.tf  variables.tf
infra/modules/static_web_app/: main.tf  outputs.tf
scripts/: import_extraction.py  process_pdf.py  store_pdf_locally.py
src/invoice_ingestion/: __init__.py  config.py  pipeline.py
tests/: conftest.py  factories.py
tests/integration/: test_api.py
(+94 files in other folders)
